# rabbit

./: Cargo.toml  LICENSE  README.md  compose.yml  readme.md
migrations/2023-12-22-135046_create_users/: up.sql
migrations/2023-12-22-135650_create_categories/: up.sql
migrations/2023-12-22-135844_create_series/: up.sql
migrations/2023-12-22-141631_create_series_points/: down.sql  up.sql
src/: db.rs  lib.rs  models.rs  schema.rs
src/db/: json.rs  pg.rs
src/models/: category.rs  series.rs  series_point.rs  series_type.rs  user.rs
