[package]
name = "rabbit"
version = "0.1.0"
authors = ["Akbar Rahman <hi@alv.cx>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.31", features = [ "clock", "serde" ] }
diesel = { version = "2.1.4", features = ["postgres", "chrono" ] }
dotenvy = "0.15"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "std" ] }
serde_with = { version = "3.4.0", features = [ "std", "chrono_0_4", "json" ] }

rocket = { version = "0.5", features = [ "json" ] }
